# tzhandshake

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Notes.md  README.md  shell.nix
benches/: nonce_inc.rs
proptest-regressions/p2p/: mod.txt
src/: identity.rs  lib.rs  main.rs  peer_id.rs
src/encoding/: bin.rs  error.rs  json.rs  mod.rs  p2p_serde.rs  read.rs
src/p2p/: binserde.rs  handshake.rs  mod.rs
