[package]
name = "tzhandhsake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
async-trait = "0.1.80"
blake2 = "0.10.6"
clap = { version = "4.5.4", features = ["derive"] }
crypto_box = { version = "0.9.1", features = ["serde"] }
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive", "alloc"] }
serde_json = "1.0.115"
serdect = "0.2.0"
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["net", "io-util", "macros", "rt-multi-thread"] }
